fix right padding for overflowed pre/code blocks
see stackoverflow.com/a/10055203

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -105,8 +105,11 @@ p code
 
 pre
   background: $bg-semi-bright
-  padding: .8rem
   overflow-x: scroll
+
+pre code
+  margin: .8rem
+  display: inline-block
 
 ul, ol
   padding-left: .8rem
